Some of lab 2 and start of Flappy Bird

--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -1,31 +1,55 @@
-YOUR NAME Lab 2: Intro to HTML
+<!DOCTYPE html>
 
-Selectors
-Main Page
+<html>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Ally Nielsen Lab 2</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
 
-First, the basics.
+    <body>
+        <div class="title">
+            <h1>Ally Nielsen Lab 2: CSS Selectors<h1>
+        </div>
+        <div class="w">
+            
+        </div>
+        <div class="wrapper">
+            <span><a href="selectors.html">Selectors</a></span>
+            <a href="index.html">Main Page</a>
+        </div>
+        
+        <p>
+        <h2>First, the basics.</h2>
+        You need the following to build your website.
+        </p>
 
-You need the following to build your website.
+        <div class="section_1">
+        <ul>
+            <li>HTML and CSS</li>
+            <li>Javascript</li>
+            <li>Node.js</li>
+            <li>And other web development frameworks</li>
+        </ul>
 
-HTML and CSS
-Javascript
-Node.js
-And other web development frameworks
+        <ol>
+            <p>You should list your top 3 goals for the class below.</p>
+            <li>Learn front-end web design</li>
+            <li>Learn new programming languages</li>
+            <li>Learn how to work with others in a technical space</li>
+            <li>Learn popular web dev frameworks</li>
+        </ol>
+        </div>
 
-You should list your top 3 goals for the class below.
+        <div class="section_2">
+            <h2 class="subtitle">Let's Try Some Inline Elements</h2>
+            <p>Sometimes you want to draw attention to something in a line of text.</p>
+            <p>Sometimes you want to strongly emphasize something in the text.</p>
+            <p>Sometimes you want to do both.</p>
 
-Learn front-end web design
-Learn new programming languages
-Learn how to work with others in a technical space
-Learn popular web dev frameworks
+        </div>
 
-Let's Try Some Inline Elements
 
-Sometimes you want to draw attention to something in a line of text.
-
-Sometimes you want to strongly emphasize something in the text.
-
-Sometimes you want to do both.
 
 Empty Elements
 
@@ -38,3 +62,5 @@ Don't forget to use alt text on your images. It's important for accessibility.
 
 Include a hyperlink here to your github repository for class.
 If you want your repo to be private, be sure to invite Prof A as a "collaborator."
+
+</html>
