--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -5,20 +5,15 @@
         <meta charset="UTF-8" />
         <title>Ally Nielsen Lab 2</title>
         <link rel="stylesheet" href="styles.css">
+        <h1 class="title">Ally Nielsen Lab 2: CSS Selectors<h1>
     </head>
 
     <body>
-        <div class="title">
-            <h1>Ally Nielsen Lab 2: CSS Selectors<h1>
-        </div>
-        <div class="w">
-            
-        </div>
-        <div class="wrapper">
+        <div class="default">
             <span><a href="selectors.html">Selectors</a></span>
-            <a href="index.html">Main Page</a>
+            <span><a href="index.html">Main Page</a></span>
         </div>
-        
+
         <p>
         <h2>First, the basics.</h2>
         You need the following to build your website.
