--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 
 <html>
@@ -6,65 +5,81 @@
         <meta charset="UTF-8" />
         <title>Ally Nielsen Lab 2</title>
         <link rel="stylesheet" href="styles.css">
-        <h1 class="title">Ally Nielsen Lab 2: CSS Selectors<h1>
     </head>
 
     <body>
-        <div class="default">
-            <span><a href="selectors.html">Selectors</a></span>
-            <span><a href="index.html">Main Page</a></span>
+        <div class="wrapper">
+            <div>
+                <h1 class="title">Ally Nielsen Lab 2: CSS Selectors</h1>
+            </div>
+
+            <nav>
+                <a href="selectors.html">Selectors</a>
+                <a href="index.html">Main Page</a>
+            </nav>
+          
+            <div>
+                <div class="text">
+                    <h2 class="subtitle">First, the basics.</h2>
+                    <p class="default">You need the following to build your website</p>    
+                </div>
+
+                <div class="section_1">
+                    <ul>
+                        <li>HTML and CSS</li>
+                        <li>Javascript</li>
+                        <li>Node.js</li>
+                        <li>And other web development frameworks</li>
+                    </ul>
+
+                    <ol>
+                        <p>You should list your top 3 goals for the class below.</p>
+                        <li>Learn front-end web design</li>
+                        <li>Learn new programming languages</li>
+                        <li>Learn how to work with others in a technical space</li>
+                        <li>Learn popular web dev frameworks</li>
+                    </ol>
+                </div>
+
+            <div class="section_2">
+                <h2 class="subtitle">Let's Try Some Inline Elements</h2>
+                <p class="default">Sometimes you want to <em>draw</em> attention to something in a line of text.</p>
+                <p class="default">Sometimes you want to <strong>strongly emphasize something</strong> in the text.</p>
+                <p class="default">Sometimes you want to <em><strong>do both</strong></em>.</p>
+            </div>
+
+            <div class="section_3">
+                <div class="text">
+                    <h3 class="subtitle">Empty Elements</h3> <br>
+                    <p class="default">Soft line breaks can't wrap anything.<br>
+                    Neither can image tags, or hard lines.<br>
+                    Add a hard line under here, and make sure you've used some soft line breaks to match your page to the sample.</p>
+                    <hr>
+                </div>
+            </div>
+
+            <div class="section_4">
+                <div class="text">
+                    <h2 class="subtitle">Images</h2>
+                    <p class="default">Include the four images in the /images folder below.</p>
+                    <p class="default">Don't forget to use alt text on your images. It's important for accessibility.</p>
+                </div>
+                <div class="carousel">
+                    <div class="slides">
+                        <img id="slide_1" src="images/onigiri_1.png" alt="Ball">
+                        <img id="slide_2" src="images/onigiri_2.png" alt="Ball2">
+                        <img id="slide_3" src="images/onigiri_3.png" alt="Ball3">
+                        <img id="slide_4" src="images/onigiri_4.png" alt="Ball4">
+                    </div>
+                </div> 
+            </div>
+
+            <div class="text">
+                <p class="default">
+                    <a href="https://github.com/allynielsen/INST377-Lab-Work">My github repository can be found here.</a>
+                </p>
+                <p class="default">If you want your repo to be private, be sure to invite Prof A as a "collaborator"</p>
+            </div>
         </div>
-
-        <p>
-        <h2>First, the basics.</h2>
-        You need the following to build your website.
-        </p>
-
-        <div class="section_1">
-        <ul>
-            <li>HTML and CSS</li>
-            <li>Javascript</li>
-            <li>Node.js</li>
-            <li>And other web development frameworks</li>
-        </ul>
-
-        <ol>
-            <p>You should list your top 3 goals for the class below.</p>
-            <li>Learn front-end web design</li>
-            <li>Learn new programming languages</li>
-            <li>Learn how to work with others in a technical space</li>
-            <li>Learn popular web dev frameworks</li>
-        </ol>
-        </div>
-
-        <div class="section_2">
-            <h2 class="subtitle">Let's Try Some Inline Elements</h2>
-            <p>Sometimes you want to draw attention to something in a line of text.</p>
-            <p>Sometimes you want to strongly emphasize something in the text.</p>
-            <p>Sometimes you want to do both.</p>
-
-        </div>
-=======
-YOUR NAME Lab 2: CSS Selectors
->>>>>>> 5d2c22c3bdbb7d4e9c62a093abb6845d7ee00f15
-
-
-
-Empty Elements
-
-Soft line breaks can't wrap anything. Neither can image tags, or hard lines.
-Add a hard line under here, and make sure you've used some soft line breaks to match your page to the sample.
-
-Images 
-Don't forget to use alt text on your images. It's important for accessibility.
-If you build this page right, your images will form a small "carousel"
-
-onigiri_1
-onigiri_2
-onigiri_3
-onigiri_4
-
-Include a hyperlink here to your github repository for class.
-If you want your repo to be private, be sure to invite Prof A as a "collaborator."
-
+    </body>
 </html>
