--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -1,19 +1,57 @@
-YOUR NAME Lab 3: Flexbox Demo
+<!DOCTYPE html>
+    <html lang='en'>
+        <head>
+            <meta charset='UTF-8'/>
+            <title>Allison Nielsen Lab 3: Flexbox Demo
+            </title>
+            <link rel='stylesheet' href='styles.css'/>
+        </head>
+        <body>
+            <div class='title'>
+                Allison Nielsen Lab 3: Flexbox Demo
+            </div>
+            <div class='menu-container'>
+                <div class='menu'>
+                    <div class='date'>October 22, 2021</div>
+                    <div class='db-demo'>Database Demos</div>
+                    <div class='main-page'>Main Page</div>
+                </div>
+            </div>
 
-today's date
-Database Demos
-Main Page
+            <div class='header-container'>
+                <div class='header'>
+                  <div class='group-project'><a href="google.com">Group Project Link aka Google</a></div>
+                  <div class='logo'><img src='images/awesome-logo.svg'/></div>
+                  <div class='github'><a href="https://github.com/allynielsen/INST377-Lab-Work">My Github</div>
+                </div>
+            </div>
 
-Group Project Link (no site yet)
-Awesome Logo
-Github Link
+            <div class='photo-grid-container'>
+                <div class='photo-grid'>
+                    <div class='photo-grid-item first-item'>
+                        <img src='images/one.svg'/>
+                    </div>
+                    <div class='photo-grid-item'>
+                        <img src='images/two.svg'/>
+                    </div>
+                    <div class='photo-grid-item'>
+                        <img src='images/three.svg'/>
+                    </div>
+                    <div class='photo-grid-item'>
+                        <img src='images/four.svg'/>
+                    </div>
+                    <div class='photo-grid-item last-item'>
+                        <img src='images/five.svg'/>
+                    </div>
+                </div>
+            </div>
 
-image_1
-image_2
-image_3
-image_4
-image_5
+            <div class='footer'>
+                <div class='footer-item footer-one'>footer item 1</div>
+                <div class='footer-item footer-two'>footer item 2</div>
+                <div class='footer-item footer-three'>footer item 3</div>
+            </div>
 
-footer item 1
-footer item 2
-footer item 3
+
+        </body>
+    </html>
