--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -1,19 +1,69 @@
-YOUR NAME Lab 4: HTML Forms
+<!DOCTYPE html>
+    <html lang='en'>
+        <head>
+            <meta charset='UTF-8'/>
+            <title>Allison Nielsen Lab 4: Browser Events & Selectors
+            </title>
+            <link rel='stylesheet' href='styles.css'/>
+        </head>
+        <body>
+            <div class='title'>
+                Allison Nielsen Lab 4: Browser Events & Selectors
+            </div>
+            <div class='menu-container'>
+                <div class='menu'>
+                    <div class='date'>October 22, 2021</div>
+                    <div class='db-demo'>Database Demos</div>
+                    <div class='main-page'>Main Page</div>
+                </div>
+            </div>
 
-today's date
-Database Demos
-Main Page
+            <div class='header-container'>
+                <div class='header'>
+                  <div class='group-project'><a href="google.com">Group Project Link aka Google</a></div>
+                  <div class='logo'><img src='images/awesome-logo.svg'/></div>
+                  <div class='github'><a href="https://github.com/allynielsen/INST377-Lab-Work">My Github</a></div>
 
-Group Project Link (no site yet)
-Awesome Logo
-Github Link
+                </div>
+            </div>
 
-image_1
-image_2
-image_3
-image_4
-image_5
+            <div class='photo-grid-container'>
+                <div class="carousel_actions">
+                    <button class="carousel_actions" id="carousel_button_prev">Previous Slide</button>
+                </div>
 
-footer item 1
-footer item 2
-footer item 3
+                <div class="carousel">
+                    <div class="carousel_item carousel_item_visible">
+                        <img src="images/one.svg">
+                    </div>
+                    <div class="carousel_item">
+                        <img src="images/two.svg">
+                    </div>
+                    <div class="carousel_item">
+                        <img src="images/three.svg">
+                    </div>
+                    <div class="carousel_item">
+                        <img src="images/four.svg">
+                    </div>
+                    <div class="carousel_item">
+                        <img src="images/five.svg">
+                    </div>
+                </div>
+
+                <div class="carousel_actions">
+                    <button id="carousel_button_next">Next Slide</button>
+                </div>   
+            </div>
+
+       
+
+            <div class='footer'>
+                <div class='footer-item footer-one'>footer item 1</div>
+                <div class='footer-item footer-two'>footer item 2</div>
+                <div class='footer-item footer-three'>footer item 3</div>
+            </div>
+
+        <script src="script.js"></script>
+        </body>    
+    </html>
+
